--- a/config/sync/core.entity_form_display.user.user.register.yml
+++ b/config/sync/core.entity_form_display.user.user.register.yml
@@ -58,8 +58,11 @@ hidden:
   field_public_email: true
   field_rank: true
   field_rating_in_party_list: true
+  field_referral_benefits: true
+  field_referral_date: true
   field_referral_url: true
   field_social_auth_password: true
+  field_tel: true
   field_twitter_url: true
   google_analytics: true
   langcode: true
