--- a/config/sync/core.entity_view_display.user.user.minimal.yml
+++ b/config/sync/core.entity_view_display.user.user.minimal.yml
@@ -80,8 +80,11 @@ hidden:
   field_rank: true
   field_rating_in_party_list: true
   field_referral: true
+  field_referral_benefits: true
+  field_referral_date: true
   field_referral_url: true
   field_social_auth_password: true
+  field_tel: true
   field_twitter_url: true
   langcode: true
   masquerade: true
