--- a/config/sync/menu_export.export_data.yml
+++ b/config/sync/menu_export.export_data.yml
@@ -1,80 +1,23 @@
-1:
+34:
   id:
-    value: '1'
+    value: '34'
   uuid:
-    value: 5e0e9ae8-e00e-460c-8ecf-49bb78a3a2ac
+    value: a2ed1ec9-f011-4732-aa69-6cdfbeb7fc5c
   revision_id:
     value: '1'
   langcode:
-    value: ka
+    value: en
   bundle:
     value: menu_link_content
   revision_created:
-    value: '1560945206'
+    value: '1560179640'
   revision_user:
     target_id: '0'
-  revision_log_message:
-    value: ''
-  enabled:
-    value: '1'
-  title:
-    value: 'Update views count'
-  description:
-    value: ''
-  menu_name:
-    value: admin
-  link:
-    uri: 'internal:/admin/update_page_views'
-    title: ''
-    options: {  }
-  external:
-    value: '0'
-  rediscover:
-    value: '1'
-  weight:
-    value: '0'
-  expanded:
-    value: '0'
-  parent:
-    value: admin_toolbar_tools.help
-  changed:
-    value: '1560945229'
-  default_langcode:
-    value: '1'
-  revision_default:
-    value: '1'
-  revision_translation_affected:
-    value: '1'
-  metatag: false
-  content_translation_source:
-    value: und
-  content_translation_outdated:
-    value: '0'
-  content_translation_uid:
-    target_id: '1'
-  content_translation_status:
-    value: '1'
-  content_translation_created:
-    value: '1560945206'
-2:
-  id:
-    value: '2'
-  uuid:
-    value: d376d850-74ad-45ff-bc45-60898a4b44c4
-  revision_id:
-    value: '2'
-  langcode:
-    value: ka
-  bundle:
-    value: menu_link_content
-  revision_created:
-    value: '1563206260'
-  revision_user: false
   revision_log_message: false
   enabled:
     value: '1'
   title:
-    value: 'GED Transactions'
+    value: 'GeD transaction'
   description: false
   menu_name:
     value: admin
@@ -93,7 +36,7 @@
   parent:
     value: system.admin
   changed:
-    value: '1563206338'
+    value: '1578663551'
   default_langcode:
     value: '1'
   revision_default:
@@ -110,4 +53,114 @@
   content_translation_status:
     value: '1'
   content_translation_created:
-    value: '1563206260'
+    value: '1560179640'
+56:
+  id:
+    value: '56'
+  uuid:
+    value: 50ad326a-ab9f-4d6a-ba73-c2544abf98d4
+  revision_id:
+    value: '55'
+  langcode:
+    value: en
+  bundle:
+    value: menu_link_content
+  revision_created:
+    value: '1578663480'
+  revision_user: false
+  revision_log_message: false
+  enabled:
+    value: '1'
+  title:
+    value: 'Excel export'
+  description: false
+  menu_name:
+    value: admin
+  link:
+    uri: 'internal:#'
+    title: ''
+    options: {  }
+  external:
+    value: '0'
+  rediscover:
+    value: '1'
+  weight:
+    value: '3'
+  expanded:
+    value: '0'
+  parent:
+    value: system.admin
+  changed:
+    value: '1578663768'
+  default_langcode:
+    value: '1'
+  revision_default:
+    value: '1'
+  revision_translation_affected:
+    value: '1'
+  metatag: false
+  content_translation_source:
+    value: und
+  content_translation_outdated:
+    value: '0'
+  content_translation_uid:
+    target_id: '76'
+  content_translation_status:
+    value: '1'
+  content_translation_created:
+    value: '1578663480'
+57:
+  id:
+    value: '57'
+  uuid:
+    value: 3a15e5f3-2520-4d31-90f7-e428eb64f990
+  revision_id:
+    value: '56'
+  langcode:
+    value: en
+  bundle:
+    value: menu_link_content
+  revision_created:
+    value: '1578663710'
+  revision_user: false
+  revision_log_message: false
+  enabled:
+    value: '1'
+  title:
+    value: 'Ged transaction'
+  description: false
+  menu_name:
+    value: admin
+  link:
+    uri: 'internal:/admin/ged-transactions/export'
+    title: ''
+    options: {  }
+  external:
+    value: '0'
+  rediscover:
+    value: '1'
+  weight:
+    value: '0'
+  expanded:
+    value: '0'
+  parent:
+    value: 'menu_link_content:50ad326a-ab9f-4d6a-ba73-c2544abf98d4'
+  changed:
+    value: '1578663786'
+  default_langcode:
+    value: '1'
+  revision_default:
+    value: '1'
+  revision_translation_affected:
+    value: '1'
+  metatag: false
+  content_translation_source:
+    value: und
+  content_translation_outdated:
+    value: '0'
+  content_translation_uid:
+    target_id: '76'
+  content_translation_status:
+    value: '1'
+  content_translation_created:
+    value: '1578663710'
