Add menu links.

--- a/config/sync/menu_export.export_data.yml
+++ b/config/sync/menu_export.export_data.yml
@@ -13,12 +13,14 @@
     value: '1560179640'
   revision_user:
     target_id: '0'
-  revision_log_message: false
+  revision_log_message:
+    value: ''
   enabled:
     value: '1'
   title:
     value: 'GeD transaction'
-  description: false
+  description:
+    value: ''
   menu_name:
     value: admin
   link:
@@ -67,13 +69,16 @@
     value: menu_link_content
   revision_created:
     value: '1578663480'
-  revision_user: false
-  revision_log_message: false
+  revision_user:
+    target_id: '0'
+  revision_log_message:
+    value: ''
   enabled:
     value: '1'
   title:
     value: 'Excel export'
-  description: false
+  description:
+    value: ''
   menu_name:
     value: admin
   link:
@@ -122,7 +127,8 @@
     value: menu_link_content
   revision_created:
     value: '1578663710'
-  revision_user: false
+  revision_user:
+    target_id: '0'
   revision_log_message: false
   enabled:
     value: '1'
@@ -140,13 +146,13 @@
   rediscover:
     value: '1'
   weight:
-    value: '0'
+    value: '2'
   expanded:
     value: '0'
   parent:
     value: 'menu_link_content:50ad326a-ab9f-4d6a-ba73-c2544abf98d4'
   changed:
-    value: '1578663786'
+    value: '1578665770'
   default_langcode:
     value: '1'
   revision_default:
@@ -164,3 +170,223 @@
     value: '1'
   content_translation_created:
     value: '1578663710'
+58:
+  id:
+    value: '58'
+  uuid:
+    value: 1a9ca6cc-e277-46c1-87b7-79c08941ec5c
+  revision_id:
+    value: '57'
+  langcode:
+    value: en
+  bundle:
+    value: menu_link_content
+  revision_created:
+    value: '1578665429'
+  revision_user: false
+  revision_log_message: false
+  enabled:
+    value: '1'
+  title:
+    value: Donation
+  description: false
+  menu_name:
+    value: admin
+  link:
+    uri: 'internal:/admin/donations/export'
+    title: ''
+    options: {  }
+  external:
+    value: '0'
+  rediscover:
+    value: '1'
+  weight:
+    value: '0'
+  expanded:
+    value: '0'
+  parent:
+    value: 'menu_link_content:50ad326a-ab9f-4d6a-ba73-c2544abf98d4'
+  changed:
+    value: '1578665459'
+  default_langcode:
+    value: '1'
+  revision_default:
+    value: '1'
+  revision_translation_affected:
+    value: '1'
+  metatag: false
+  content_translation_source:
+    value: und
+  content_translation_outdated:
+    value: '0'
+  content_translation_uid:
+    target_id: '76'
+  content_translation_status:
+    value: '1'
+  content_translation_created:
+    value: '1578665429'
+59:
+  id:
+    value: '59'
+  uuid:
+    value: 161466f0-e4ee-4180-9352-6d543b44a81d
+  revision_id:
+    value: '58'
+  langcode:
+    value: en
+  bundle:
+    value: menu_link_content
+  revision_created:
+    value: '1578665570'
+  revision_user: false
+  revision_log_message: false
+  enabled:
+    value: '1'
+  title:
+    value: 'Ged count'
+  description: false
+  menu_name:
+    value: admin
+  link:
+    uri: 'internal:/admin/ged-export/export'
+    title: ''
+    options: {  }
+  external:
+    value: '0'
+  rediscover:
+    value: '1'
+  weight:
+    value: '4'
+  expanded:
+    value: '0'
+  parent:
+    value: 'menu_link_content:50ad326a-ab9f-4d6a-ba73-c2544abf98d4'
+  changed:
+    value: '1578665770'
+  default_langcode:
+    value: '1'
+  revision_default:
+    value: '1'
+  revision_translation_affected:
+    value: '1'
+  metatag: false
+  content_translation_source:
+    value: und
+  content_translation_outdated:
+    value: '0'
+  content_translation_uid:
+    target_id: '76'
+  content_translation_status:
+    value: '1'
+  content_translation_created:
+    value: '1578665570'
+60:
+  id:
+    value: '60'
+  uuid:
+    value: f048b518-70ba-4ec4-897d-28fab8374036
+  revision_id:
+    value: '59'
+  langcode:
+    value: en
+  bundle:
+    value: menu_link_content
+  revision_created:
+    value: '1578665608'
+  revision_user: false
+  revision_log_message: false
+  enabled:
+    value: '1'
+  title:
+    value: 'Regular donations'
+  description: false
+  menu_name:
+    value: admin
+  link:
+    uri: 'internal:/admin/regular-donations/export'
+    title: ''
+    options: {  }
+  external:
+    value: '0'
+  rediscover:
+    value: '1'
+  weight:
+    value: '1'
+  expanded:
+    value: '0'
+  parent:
+    value: 'menu_link_content:50ad326a-ab9f-4d6a-ba73-c2544abf98d4'
+  changed:
+    value: '1578665770'
+  default_langcode:
+    value: '1'
+  revision_default:
+    value: '1'
+  revision_translation_affected:
+    value: '1'
+  metatag: false
+  content_translation_source:
+    value: und
+  content_translation_outdated:
+    value: '0'
+  content_translation_uid:
+    target_id: '76'
+  content_translation_status:
+    value: '1'
+  content_translation_created:
+    value: '1578665608'
+61:
+  id:
+    value: '61'
+  uuid:
+    value: 0c8de6d0-6de7-4132-8322-893ce6b33ff6
+  revision_id:
+    value: '60'
+  langcode:
+    value: en
+  bundle:
+    value: menu_link_content
+  revision_created:
+    value: '1578665648'
+  revision_user: false
+  revision_log_message: false
+  enabled:
+    value: '1'
+  title:
+    value: 'Referral transaction'
+  description: false
+  menu_name:
+    value: admin
+  link:
+    uri: 'internal:/admin/referral-transactions/export'
+    title: ''
+    options: {  }
+  external:
+    value: '0'
+  rediscover:
+    value: '1'
+  weight:
+    value: '3'
+  expanded:
+    value: '0'
+  parent:
+    value: 'menu_link_content:50ad326a-ab9f-4d6a-ba73-c2544abf98d4'
+  changed:
+    value: '1578665770'
+  default_langcode:
+    value: '1'
+  revision_default:
+    value: '1'
+  revision_translation_affected:
+    value: '1'
+  metatag: false
+  content_translation_source:
+    value: und
+  content_translation_outdated:
+    value: '0'
+  content_translation_uid:
+    target_id: '76'
+  content_translation_status:
+    value: '1'
+  content_translation_created:
+    value: '1578665648'
