--- a/composer.json
+++ b/composer.json
@@ -267,6 +267,7 @@
     "drupal/social_api": "^2.0",
     "drupal/social_auth": "2.0.0-beta6",
     "drupal/social_auth_facebook": "2.0.0-beta4",
+    "drupal/stage_file_proxy": "^1.0@RC",
     "drupal/static_server": "^1.2",
     "drupal/statistics_counter": "1.x-dev",
     "drupal/straw": "^1.2",
@@ -297,6 +298,7 @@
     "harvesthq/chosen": "1.8.7",
     "nesbot/carbon": "^2.24",
     "nicolab/php-ftp-client": "^1.4",
+    "paypal/paypal-checkout-sdk": "1.0.1",
     "symfony/dotenv": "^4.3",
     "wearede/tbcpay-php": "^0.9.3",
     "webflo/drupal-finder": "1.1.0",
