--- a/web/themes/custom/girchi/girchi.libraries.yml
+++ b/web/themes/custom/girchi/girchi.libraries.yml
@@ -18,6 +18,8 @@ donation:
   version: 1.1
   js:
     js/donation.js: {}
+    js/paypal.js: {}
+    https://www.paypal.com/sdk/js?client-id=AUCemHy3DQN_XhP9dqNahbnOwM2kawkNr-shr7KIED1F3cGDObPi2Iw2UhTUPMSKmnT6e_1i7C9HhyJ4&disable-funding=credit,card: { type: external, minified: true }
   dependencies:
     - core/jquery
 
