--- a/web/modules/custom/girchi_banking/girchi_banking.links.menu.yml
+++ b/web/modules/custom/girchi_banking/girchi_banking.links.menu.yml
@@ -5,3 +5,11 @@ credit_card.admin.structure.settings:
   description: 'Configure Credit card entities'
   route_name: credit_card.settings
   parent: system.admin_structure
+
+banking.account:
+  title: 'My credit cards'
+  description: ''
+  route_name: girchi_banking.credit_card_controller_cards
+  menu_name: account
+  parent: account
+  weight: -45
