--- a/web/modules/custom/girchi_donations/girchi_donations.routing.yml
+++ b/web/modules/custom/girchi_donations/girchi_donations.routing.yml
@@ -26,7 +26,7 @@ girchi_donations.donations_controller_fail:
     _permission: 'access content'
 
 girchi_donations.regular_donations:
-  path: '/user/regular-donations'
+  path: '/user/regular-donations/list'
   defaults:
     _controller: '\Drupal\girchi_donations\Controller\DonationsController::regularDonations'
     _title: 'Automatic payments'
@@ -43,16 +43,22 @@ girchi_donations.update_donation_status:
     _permission: 'access content'
     _role: 'authenticated'
 
-girchi_donations.edit_donation:
-  path: 'donate/edit_donation'
-  defaults:
-    _controller: '\Drupal\girchi_donations\Controller\DonationsController::editDonation'
-    _title: 'Update donation status'
-  requirements:
-    _permission: 'access content'
-    _role: 'authenticated'
-
 entity.regular_donation.collection:
   path: '/admin/regular-donations'
   requirements:
     _permission: 'administer regular donation entities'
+
+girchi_donations.edit_regular:
+  path: '/user/donations/regular/{user}/{regular}'
+  defaults:
+    _controller: '\Drupal\girchi_donations\Controller\DonationsController::editRegularDonationAction'
+    _title: 'Regular donation settings'
+  requirements:
+    _permission: 'access content'
+    _role: 'authenticated'
+  options:
+    parameters:
+      user:
+        type: entity:user
+      regular:
+        type: entity:regular_donation
