--- a/composer.json
+++ b/composer.json
@@ -228,6 +228,7 @@
     "drupal/file_browser": "dev-1.x",
     "drupal/flood_unblock": "^1.4",
     "drupal/focal_point": "^1.0@beta",
+    "drupal/form_options_attributes": "^1.0",
     "drupal/geolocation": "^1.10",
     "drupal/google_analytics": "^3.0",
     "drupal/google_map_field": "^1.5",
