#594 Add theme hook in paypal module and add services

--- a/web/modules/custom/girchi_paypal/girchi_paypal.routing.yml
+++ b/web/modules/custom/girchi_paypal/girchi_paypal.routing.yml
@@ -7,3 +7,12 @@ girchi_paypal.paypal_controller:
     _permission: 'access content'
   options:
     no_cache: 'TRUE'
+
+girchi_paypal.finish_page:
+  path: '/finish/paypal'
+  defaults:
+    _controller: '\Drupal\girchi_paypal\Controller\PaypalController::donationPage'
+    _title: 'Donate page'
+  requirements:
+    _permission: 'access content'
+
