Revert "Merge branch 'dev' into 594-paypal-integration"
This reverts commit 737080f535a9d5b386a09ea0402aceb619b52dd8, reversing
changes made to 7e6c692916a405c7a7f54bb807d1bf1c21e283e2.

--- a/web/modules/custom/girchi_donations/girchi_donations.services.yml
+++ b/web/modules/custom/girchi_donations/girchi_donations.services.yml
@@ -13,3 +13,9 @@ services:
       - '@entity_type.manager'
       - '@logger.factory'
       - '@keyvalue'
+  girchi_donations.create_ged_transaction:
+    class: Drupal\girchi_donations\Utils\CreateGedTransaction
+    arguments:
+      - '@entity_type.manager'
+      - '@girchi_donations.ged_calculator'
+      - '@keyvalue'
