--- a/composer.json
+++ b/composer.json
@@ -208,7 +208,7 @@
     "drupal/contact_storage": "^1.0@beta",
     "drupal/context": "^4.0@beta",
     "drupal/context_groups": "^1.0",
-    "drupal/core": "^8.7.5",
+    "drupal/core": "8.7.10",
     "drupal/csv_serialization": "^1.0",
     "drupal/default_content": "^1.0@alpha",
     "drupal/devel": "^1.0@RC",
@@ -228,6 +228,7 @@
     "drupal/file_browser": "dev-1.x",
     "drupal/flood_unblock": "^1.4",
     "drupal/focal_point": "^1.0@beta",
+    "drupal/form_options_attributes": "^1.0",
     "drupal/geolocation": "^1.10",
     "drupal/google_analytics": "^3.0",
     "drupal/google_map_field": "^1.5",
@@ -297,6 +298,7 @@
     "harvesthq/chosen": "1.8.7",
     "nesbot/carbon": "^2.24",
     "nicolab/php-ftp-client": "^1.4",
+    "paypal/paypal-checkout-sdk": "^1.0",
     "symfony/dotenv": "^4.3",
     "wearede/tbcpay-php": "^0.9.3",
     "webflo/drupal-finder": "1.1.0",
