--- a/web/modules/custom/girchi_paypal/girchi_paypal.routing.yml
+++ b/web/modules/custom/girchi_paypal/girchi_paypal.routing.yml
@@ -16,3 +16,12 @@ girchi_paypal.finish_page:
   requirements:
     _permission: 'access content'
 
+girchi_paypal.paypal_settings_form:
+  path: '/admin/config/girchi_paypal/paypalsettings'
+  defaults:
+    _form: '\Drupal\girchi_paypal\Form\PaypalSettingsForm'
+    _title: 'PaypalSettingsForm'
+  requirements:
+    _permission: 'access administration pages'
+  options:
+    _admin_route: TRUE
