#628 Create paypal utils service.

--- a/web/modules/custom/girchi_paypal/girchi_paypal.services.yml
+++ b/web/modules/custom/girchi_paypal/girchi_paypal.services.yml
@@ -1,5 +1,7 @@
 services:
-  paypal_client:
-    class: Drupal\girchi_paypal\Utils\PayPalClient;
+  girchi_paypal.paypal_utils:
+    class: Drupal\girchi_paypal\Utils\PaypalUtils
     arguments:
-      - '@module_handler'
+      - '@entity_type.manager'
+      - '@logger.factory'
+
