#628 Improve paypal module and logger.

--- a/web/modules/custom/girchi_donations/girchi_donations.services.yml
+++ b/web/modules/custom/girchi_donations/girchi_donations.services.yml
@@ -18,4 +18,4 @@ services:
     arguments:
       - '@entity_type.manager'
       - '@girchi_donations.ged_calculator'
-      - '@keyvalue'
+      - '@logger.factory'
