--- a/config/sync/views.view.donations.yml
+++ b/config/sync/views.view.donations.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.donation.field_donation_type
+    - field.storage.donation.field_source
     - user.role.authenticated
   module:
     - better_exposed_filters
@@ -616,6 +617,69 @@ display:
           entity_type: ged_transaction
           entity_field: ged_amount
           plugin_id: field
+        field_source:
+          id: field_source
+          table: donation__field_source
+          field: field_source
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: Source
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
       filters:
         politician_donation:
           id: politician_donation
@@ -850,6 +914,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.donation.field_donation_type'
+        - 'config:field.storage.donation.field_source'
   data_export_1:
     display_plugin: data_export
     id: data_export_1
@@ -907,6 +972,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.donation.field_donation_type'
+        - 'config:field.storage.donation.field_source'
   page_1:
     display_plugin: page
     id: page_1
@@ -945,6 +1011,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.donation.field_donation_type'
+        - 'config:field.storage.donation.field_source'
   page_2:
     display_plugin: page
     id: page_2
