--- a/config/sync/views.view.party_list.yml
+++ b/config/sync/views.view.party_list.yml
@@ -617,6 +617,43 @@ display:
             field_first_name: field_first_name
             field_last_name: field_last_name
           plugin_id: combine
+        field_political_ged_value:
+          id: field_political_ged_value
+          table: user__field_political_ged
+          field: field_political_ged_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '!='
+          value: '0'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: string
       sorts:
         field_rating_in_party_list_value:
           id: field_rating_in_party_list_value
