Add permission to leaderboard form.

--- a/web/modules/custom/girchi_leaderboard/girchi_leaderboard.routing.yml
+++ b/web/modules/custom/girchi_leaderboard/girchi_leaderboard.routing.yml
@@ -4,4 +4,6 @@ girchi_leaderboard.leaderboard_form:
     _form: '\Drupal\girchi_leaderboard\Form\LeaderboardForm'
     _title: 'LeaderboardForm'
   requirements:
-    _access: 'TRUE'
+    _permission: 'access administration pages'
+  options:
+    _admin_route: TRUE
