--- a/config/sync/core.entity_view_display.user.user.default.yml
+++ b/config/sync/core.entity_view_display.user.user.default.yml
@@ -20,6 +20,7 @@ dependencies:
     - field.field.user.user.field_politician
     - field.field.user.user.field_profile_video
     - field.field.user.user.field_public_email
+    - field.field.user.user.field_publicity
     - field.field.user.user.field_rank
     - field.field.user.user.field_rating_in_party_list
     - field.field.user.user.field_referral
@@ -124,6 +125,16 @@ content:
       format: yes-no
       format_custom_true: ''
       format_custom_false: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_publicity:
+    weight: 19
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
     third_party_settings: {  }
     type: boolean
     region: content
