--- a/config/sync/views.view.party_list.yml
+++ b/config/sync/views.view.party_list.yml
@@ -654,6 +654,42 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: string
+        field_publicity_value:
+          id: field_publicity_value
+          table: user__field_publicity
+          field: field_publicity_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: '1'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: boolean
       sorts:
         field_rating_in_party_list_value:
           id: field_rating_in_party_list_value
