--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -73,6 +73,7 @@ module:
   metatag: 0
   metatag_facebook: 0
   metatag_open_graph: 0
+  metatag_routes: 0
   metatag_twitter_cards: 0
   node: 0
   om_code_embed: 0
