--- a/web/modules/custom/girchi_donations/girchi_donations.routing.yml
+++ b/web/modules/custom/girchi_donations/girchi_donations.routing.yml
@@ -74,3 +74,15 @@ girchi_donations.export_controller_page:
   options:
     _admin_route: 'TRUE'
     no_cache: 'TRUE'
+
+girchi_donations.export_controller_data:
+  path: '/donations/export/resource'
+  defaults:
+    _controller: '\Drupal\girchi_donations\Controller\ExportController::getResource'
+    _title: 'Donation export'
+  requirements:
+    _permission: 'access content'
+    _role: 'authenticated'
+  options:
+    _admin_route: 'TRUE'
+    no_cache: 'TRUE'
