--- a/web/modules/custom/girchi_donations/js/package.json
+++ b/web/modules/custom/girchi_donations/js/package.json
@@ -8,9 +8,14 @@
         "build": "webpack --config webpack.prod.js"
     },
     "dependencies": {
+        "babel-plugin-syntax-async-functions": "^6.13.0",
+        "material-ui-core": "^4.9.4",
+        "namor": "^2.0.2",
         "react": "^16.12.0",
         "react-datepicker": "^2.13.0",
-        "react-dom": "^16.12.0"
+        "react-dom": "^16.12.0",
+        "react-table": "^7.0.0-rc.16",
+        "regenerator-runtime": "^0.13.3"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.4",
@@ -25,10 +30,14 @@
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^3.4.2",
         "mini-css-extract-plugin": "^0.9.0",
+        "prettier": "^1.19.1",
         "style-loader": "^1.1.3",
         "webpack": "^4.41.6",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.10.3",
         "webpack-merge": "^4.2.2"
-    }
+    },
+    "browserslist": [
+        "last 2 Chrome versions"
+    ]
 }
